# multiagent-orchestration

./: .gitignore  ARCHITECTURAL_DECISIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: chaos_engineering.md  deployment.md
docs/diagrams/: circuit_breaker.mmd  dag_orchestration.mmd  idempotency_flow.mmd  loop_detection.mmd
examples/financial_agent/: README.md  run.py
examples/hero_demo/: README.md  run.py
examples/research_agent/: README.md  run.py
src/multiagent_orchestration/: __init__.py  _validator.py  circuit_breaker.py  contracts.py  dag.py  human_in_the_loop.py  idempotency.py  loop_detector.py  observability.py  orchestrator.py  result.py  retry.py  saga.py  semantic_loop_detector.py  token_budget.py
src/multiagent_orchestration/adapters/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py  stub_adapter.py
src/multiagent_orchestration/state_sync/: __init__.py  event_store.py
tests/: conftest.py
tests/integration/: test_financial_agent.py  test_research_agent.py
tests/unit/: test_circuit_breaker.py  test_contracts.py  test_dag.py  test_human_in_the_loop.py  test_idempotency.py  test_loop_detector.py  test_saga.py  test_semantic_loop_detector.py  test_state_sync.py  test_token_budget.py
